5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1662_2975.log
== TEST (2019-04-15 15:32:00) 
-- CODE:
qtd = input("digite a quantidade ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:32:52) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:41) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:14) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if dis = qtd * 3 + qtd2 * 3.50:
	valor total = sim
else:
	valor total = nao
print ()
-- ERROR:
File "XXXX", line 5
    if dis = qtd * 3 + qtd2 * 3.50:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:24) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if (dis = qtd * 3 + qtd2 * 3.50):
	valor total = sim
else:
	valor total = nao
print ()
-- ERROR:
File "XXXX", line 5
    if (dis = qtd * 3 + qtd2 * 3.50):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:44) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if (dis == qtd * 3 + qtd2 * 3.50):
	valor total = sim
else:
	valor total = nao
print ()
-- ERROR:
File "XXXX", line 6
    valor total = sim
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:56) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if (dis == qtd * 3 + qtd2 * 3.50):
	valor total == sim
else:
	valor total == nao
print ()
-- ERROR:
File "XXXX", line 6
    valor total == sim
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:19) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if (dis = qtd + qtd2):
	valor total = qtd + qtd2
	print "sim"
else:
	valor total = nao
print ()
-- ERROR:
File "XXXX", line 5
    if (dis = qtd + qtd2):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:25) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if (dis == qtd + qtd2):
	valor total = qtd + qtd2
	print "sim"
else:
	valor total = nao
print ()
-- ERROR:
File "XXXX", line 6
    valor total = qtd + qtd2
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:34) 
-- CODE:
qtd = input("quantos sucos ")
qtd2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if (dis == qtd + qtd2):
	(valor total = qtd + qtd2)
	print "sim"
else:
	valor total = nao
print ()
-- ERROR:
File "XXXX", line 6
    (valor total = qtd + qtd2)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:34) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if dis = var + var2:
	(valor total = float(var * 3 + var2 * 3.5)
	print "sim"
else:
	valor total = nao
print ()
-- ERROR:
File "XXXX", line 5
    if dis = var + var2:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:47) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if dis = var + var2:
	(valor total = float(var * 3 + var2 * 3.5)
	print "sim"
else:
	valor total = nao
print (round(valor total, 2 + "sim"))
-- ERROR:
File "XXXX", line 5
    if dis = var + var2:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:56) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if dis == var + var2:
	(valor total = float(var * 3 + var2 * 3.5)
	print "sim"
else:
	valor total = nao
print (round(valor total, 2 + "sim"))
-- ERROR:
File "XXXX", line 6
    (valor total = float(var * 3 + var2 * 3.5)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:10) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if dis == var + var2:
	valor total = float(var * 3 + var2 * 3.5
	print "sim"
else:
	valor total = nao
print (round(valor total, 2 + "sim"))
-- ERROR:
File "XXXX", line 6
    valor total = float(var * 3 + var2 * 3.5
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:41) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if dis = valor total:
	valor total = (var * 3 + var2 * 3.5)
	print valor total
else:
	valor total = (var * 3 + var2 * 3.5)
-- ERROR:
File "XXXX", line 5
    if dis = valor total:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:49) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")

if dis == valor total:
	valor total = (var * 3 + var2 * 3.5)
	print valor total
else:
	valor total = (var * 3 + var2 * 3.5)
-- ERROR:
File "XXXX", line 5
    if dis == valor total:
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:42) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")
valor total = (var * 3 + var2 * 3.5)

if dis >= valor total:
	mensagem = sim
else:
	mensagem = nao

-- ERROR:
File "XXXX", line 4
    valor total = (var * 3 + var2 * 3.5)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:55) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")
total == (var * 3 + var2 * 3.5)

if dis >= total:
	mensagem = sim
else:
	mensagem = nao
	
print (round(total + mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total == (var * 3 + var2 * 3.5)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:25) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")
total == (var * 3 + var2 * 3.5)

if dis >= total:
	mensagem = sim
else:
	mensagem = nao
	
print (round(total + mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total == (var * 3 + var2 * 3.5)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:19) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")
total == var * 3 + var2 * 3.5

if dis >= total:
	mensagem = sim
else:
	mensagem = nao
	
print (round(total + mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total == var * 3 + var2 * 3.5
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:33) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")
total = var * 3 + var2 * 3.5

if dis >= total:
	mensagem = sim
else:
	mensagem = nao
	
print (round(total + mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var * 3 + var2 * 3.5
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:55:00) 
-- CODE:
var = input("quantos sucos ")
var2 = input("quantos salgados ")
dis = input("digite o seu saldo ")
total = (var * 3 + var2 * 3.5)

if dis >= total:
	mensagem = sim
else:
	mensagem = nao
	
print (round(total + mensagem, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (var * 3 + var2 * 3.5)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
